<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp"
    tools:ignore="Overdraw">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp"
    tools:ignore="Overdraw">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/application_logo"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/hello_there_welcome_back"
        android:textColor="#000"
        android:layout_marginTop="-50dp"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic_slab"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/e_mail_address"
            android:autofillHints="emailAddress"
            app:startIconDrawable="@drawable/ic_email_svg"
            app:endIconDrawable="@drawable/ic_cancel"
            app:endIconMode="custom" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock"
            android:paddingTop="5dp"
            android:autofillHints="password"
            app:passwordToggleEnabled="true"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgot_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:fontFamily="@font/antic_slab"
            android:textColor="@color/black"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:layout_margin="2dp" />
        
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/antic_slab"
            android:text="@string/sign_in"
            android:backgroundTint="@color/powderblue"
            android:textColor="@color/black" />

        <TextView
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_here_send_an_email_to_admin_mail_id_requesting_your_credentials"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            android:fontFamily="@font/antic_slab"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/powderblue"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_send_mail"
            android:focusable="true"
            android:contentDescription="@string/e_mail_address"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</ScrollView>