<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Pages.AdminDashboard"
    android:background="@color/white"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="2dp"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/greeting_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:fontFamily="@font/bungee"/>

            <TextView
                android:id="@+id/admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-30dp"
                android:paddingStart="10dp"
                android:text=""
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/bungee"/>
        </LinearLayout>

        <Button
            android:id="@+id/password_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:fontFamily="@font/antic_slab"
            android:textColor="@color/black"
            android:text="Change Password"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:layout_marginTop="-30dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_black">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="25dp"
                    android:background="#00000000"
                    android:fontFamily="@font/antic_slab"
                    android:padding="25dp"
                    android:text="@string/add_employee"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/add_employee_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:padding="0dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </RelativeLayout>

            <ImageView
                android:layout_width="85dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/add_users"
                android:contentDescription="@string/add_employee"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_sky_blue_inverse"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/update_employee"
                    android:src="@drawable/edit_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/antic_slab"
                    android:padding="25dp"
                    android:text="@string/update_employee"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:background="#00000000"/>

                <Button
                    android:id="@+id/update_employee_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:padding="0dp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_dark_green">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="25dp"
                    android:background="#00000000"
                    android:fontFamily="@font/antic_slab"
                    android:padding="25dp"
                    android:text="@string/delete_employee"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/delete_employee_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="0dp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </RelativeLayout>

            <ImageView
                android:layout_width="85dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/delete_user"
                android:contentDescription="@string/delete_employee"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_light_blue_inverse"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/view_directory"
                    android:src="@drawable/directory"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/antic_slab"
                    android:padding="25dp"
                    android:text="@string/view_directory"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:background="#00000000"/>

                <Button
                    android:id="@+id/view_directory_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="0dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>